Replace minima html with bootstrap 4
- Set $enable-flex to true for sweet new flexbox grid and dope vertical
alignment

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,19 +1,4 @@
-<footer class="site-footer">
-
-  <div class="wrapper">
-
-    <h2 class="footer-heading">{{ site.title | escape }}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        ©{{ site.time | date: '%Y' }}
-      </div>
-
-      <div class="footer-col footer-col-5">
-        <p>{{ site.description | escape }}</p>
-      </div>
-    </div>
-
-  </div>
-
+<footer>
+  <p><p>{{ site.description | escape }}</p></p>
+  <p>©{{ site.time | date: '%Y' }}</p>
 </footer>
