--- a/_includes/left-nav.html
+++ b/_includes/left-nav.html
@@ -1,6 +1,25 @@
-<div class="col-xs-2 bg-faded">
+<div class="col-xs-2 bg-faded py-1">
+  <div class="mb-1">
+    <ul class="nav">
+      {% for my_page in site.pages %}
+        {% if my_page.title %}
+          <li class="nav-item">
+            <a class="nav-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+          </li>
+        {% endif %}
+      {% endfor %}
+    </ul>
+  </div>
+
+  <div class="mb-1">
+    <h6>Foundations</h6>
+  </div>
+
+
+  <h6>Content Patterns</h6>
+
   <ul class="nav">
-    {% for my_page in site.pages %}
+    {% for my_page in site.foundation_pages %}
       {% if my_page.title %}
         <li class="nav-item">
           <a class="nav-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
