--- a/css/_tk-core.scss
+++ b/css/_tk-core.scss
@@ -8,7 +8,7 @@
 
 // Core CSS
 @import "bootstrap/scss/reboot";
-@import "bootstrap/scss/type";
+// @import "bootstrap/scss/type";
 @import "bootstrap/scss/images";
 @import "bootstrap/scss/code";
 @import "bootstrap/scss/grid";
