--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -177,29 +177,33 @@ $font-size-lg:   1.25rem !default;
 $font-size-sm:   .875rem !default;
 $font-size-xs:   .75rem !default;
 
-$line-height-base: 1.5 !default;
+$line-height-base: 1.55 !default;
 
-$font-size-h1: 2.5rem !default;
-$font-size-h2: 2rem !default;
-$font-size-h3: 1.75rem !default;
-$font-size-h4: 1.5rem !default;
-$font-size-h5: 1.25rem !default;
-$font-size-h6: 1rem !default;
+$font-size-h1: 2.28rem !default;
+$font-size-h2: 2.03rem !default;
+$font-size-h3: 1.8rem !default;
+$font-size-h4: 1.6rem !default;
+$font-size-h5: 1.42rem !default;
+$font-size-h6: 1.27rem !default;
+$font-size-h7: 1.125rem !default;
+$font-size-h8: 1rem !default;
+$font-size-h9: .89rem !default;
+$font-size-h10: .79rem !default;
 
-$display1-size: 6rem !default;
-$display2-size: 5.5rem !default;
-$display3-size: 4.5rem !default;
-$display4-size: 3.5rem !default;
+// $display1-size: 6rem !default;
+// $display2-size: 5.5rem !default;
+// $display3-size: 4.5rem !default;
+// $display4-size: 3.5rem !default;
 
-$display1-weight: 300 !default;
-$display2-weight: 300 !default;
-$display3-weight: 300 !default;
-$display4-weight: 300 !default;
+// $display1-weight: 300 !default;
+// $display2-weight: 300 !default;
+// $display3-weight: 300 !default;
+// $display4-weight: 300 !default;
 
 $headings-margin-bottom: ($spacer / 2) !default;
 $headings-font-family:   inherit !default;
 $headings-font-weight:   500 !default;
-$headings-line-height:   1.1 !default;
+$headings-line-height:   1.25 !default;
 $headings-color:         inherit !default;
 
 $lead-font-size:   1.25rem !default;
