--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -6371,19 +6371,19 @@ mark,
 
 @font-face {
   font-family: 'tisa';
-  src: url("/assets/fonts/tisa-light.woff2") format("woff2"), url("/assets/fonts/tisa-light.woff") format("woff");
+  src: url("../assets/fonts/tisa-light.woff2") format("woff2"), url("../assets/fonts/tisa-light.woff") format("woff");
   font-weight: 300;
   font-style: normal; }
 
 @font-face {
   font-family: 'tisa';
-  src: url("/assets/fonts/tisa-medium.woff2") format("woff2"), url("/assets/fonts/tisa-medium.woff") format("woff");
+  src: url("../assets/fonts/tisa-medium.woff2") format("woff2"), url("../assets/fonts/tisa-medium.woff") format("woff");
   font-weight: 500;
   font-style: normal; }
 
 @font-face {
   font-family: 'tisa sans';
-  src: url("/assets/fonts/tisa-sans-regular.woff2") format("woff2"), url("/assets/fonts/tisa-sans-regular.woff") format("woff");
+  src: url("../assets/fonts/tisa-sans-regular.woff2") format("woff2"), url("../assets/fonts/tisa-sans-regular.woff") format("woff");
   font-weight: 400;
   font-style: normal; }
 
