--- a/css/_tk-type.scss
+++ b/css/_tk-type.scss
@@ -59,12 +59,12 @@ h6, .h6 { font-size: $font-size-h6; }
 // Horizontal rules
 //
 
-hr {
-  margin-top: $spacer-y;
-  margin-bottom: $spacer-y;
-  border: 0;
-  border-top: $hr-border-width solid $hr-border-color;
-}
+// hr {
+//   margin-top: $spacer-y;
+//   margin-bottom: $spacer-y;
+//   border: 0;
+//   border-top: $hr-border-width solid $hr-border-color;
+// }
 
 
 //
