Update font scale sizing
- Add pow() and div-x-times() mixins to drive helper classes
- Use convention of font-up and font-down to move around the scale,
e.x. `.font-up-2`, `.font-down-1`
- Add _tk-variables.scss

--- a/css/_tk-core.scss
+++ b/css/_tk-core.scss
@@ -1,5 +1,9 @@
+@import "tk-variables";
+@import "tk-mixins";
+
 // Custom bootstrap vars
-@import "variables";
+@import "custom";
+@import "bootstrap/scss/variables";
 @import "bootstrap/scss/mixins";
 
 // Reset and dependencies
