--- a/css/_custom.scss
+++ b/css/_custom.scss
@@ -179,16 +179,12 @@ $font-size-xs:   .75rem !default;
 
 $line-height-base: 1.55 !default;
 
-$font-size-h1: 2.28rem !default;
-$font-size-h2: 2.03rem !default;
-$font-size-h3: 1.8rem !default;
-$font-size-h4: 1.6rem !default;
-$font-size-h5: 1.42rem !default;
-$font-size-h6: 1.27rem !default;
-$font-size-h7: 1.125rem !default;
-$font-size-h8: 1rem !default;
-$font-size-h9: .89rem !default;
-$font-size-h10: .79rem !default;
+// $font-size-h1: 2.5rem !default;
+// $font-size-h2: 2rem !default;
+// $font-size-h3: 1.75rem !default;
+// $font-size-h4: 1.5rem !default;
+// $font-size-h5: 1.25rem !default;
+// $font-size-h6: 1rem !default;
 
 // $display1-size: 6rem !default;
 // $display2-size: 5.5rem !default;
