--- a/css/_custom.scss
+++ b/css/_custom.scss
@@ -114,8 +114,8 @@ $body-color: $gray-dark !default;
 
 $link-color:            $brand-primary !default;
 $link-decoration:       none !default;
-$link-hover-color:      darken($link-color, 15%) !default;
-$link-hover-decoration: underline !default;
+$link-hover-color:      $brand-primary !default;
+$link-hover-decoration: none !default;
 
 
 // Grid breakpoints
