--- a/docs/stylesheets/main.css
+++ b/docs/stylesheets/main.css
@@ -6279,7 +6279,7 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
   .hidden-print {
     display: none !important; } }
 
-/* Included as a mixin so that $font-location can be overridden */
+/* Included as a mixin so that $font-url-prefix can be overridden */
 /* line 30, /Users/pkelly/work/union/css/_tk-type.scss */
 p {
   font-size: 1.125rem; }
@@ -6377,36 +6377,51 @@ h6, .h6 {
 .font-down-5 {
   font-size: 0.55493rem; }
 
-/* line 91, /Users/pkelly/work/union/css/_tk-type.scss */
+/* line 79, /Users/pkelly/work/union/css/_tk-type.scss */
+.tisa-light {
+  font-family: "tisa", Georgia, "Times New Roman", Times, serif;
+  font-weight: 300; }
+
+/* line 84, /Users/pkelly/work/union/css/_tk-type.scss */
+.tisa-med {
+  font-family: "tisa", Georgia, "Times New Roman", Times, serif;
+  font-weight: 500; }
+
+/* line 89, /Users/pkelly/work/union/css/_tk-type.scss */
+.tisa-sans {
+  font-family: "tisa sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-weight: 400; }
+
+/* line 110, /Users/pkelly/work/union/css/_tk-type.scss */
 small,
 .small {
   font-size: 80%;
   font-weight: normal; }
 
-/* line 97, /Users/pkelly/work/union/css/_tk-type.scss */
+/* line 116, /Users/pkelly/work/union/css/_tk-type.scss */
 mark,
 .mark {
   padding: 0.2em;
   background-color: #fcf8e3; }
 
-/* line 108, /Users/pkelly/work/union/css/_tk-type.scss */
+/* line 127, /Users/pkelly/work/union/css/_tk-type.scss */
 .list-unstyled {
   padding-left: 0;
   list-style: none; }
 
-/* line 113, /Users/pkelly/work/union/css/_tk-type.scss */
+/* line 132, /Users/pkelly/work/union/css/_tk-type.scss */
 .list-inline {
   padding-left: 0;
   list-style: none; }
 
-/* line 116, /Users/pkelly/work/union/css/_tk-type.scss */
+/* line 135, /Users/pkelly/work/union/css/_tk-type.scss */
 .list-inline-item {
   display: inline-block; }
-  /* line 119, /Users/pkelly/work/union/css/_tk-type.scss */
+  /* line 138, /Users/pkelly/work/union/css/_tk-type.scss */
   .list-inline-item:not(:last-child) {
     margin-right: 5px; }
 
-/* line 128, /Users/pkelly/work/union/css/_tk-type.scss */
+/* line 147, /Users/pkelly/work/union/css/_tk-type.scss */
 .lh-header {
   line-height: 1.25; }
 
