--- a/css/_tk-core.scss
+++ b/css/_tk-core.scss
@@ -1,50 +1,54 @@
-@import "tk-variables";
-@import "tk-mixins";
+/*!
+ * Bootstrap v4.0.0-alpha.6 (https://getbootstrap.com)
+ * Copyright 2011-2017 The Bootstrap Authors
+ * Copyright 2011-2017 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
+ */
 
-// Custom bootstrap vars
+// Core variables and mixins
+@import "variables";
+@import "mixins";
 @import "custom";
-@import "bootstrap/scss/variables";
-@import "bootstrap/scss/mixins";
 
 // Reset and dependencies
-@import "bootstrap/scss/normalize";
-@import "bootstrap/scss/print";
+@import "normalize";
+@import "print";
 
 // Core CSS
-@import "bootstrap/scss/reboot";
-// @import "bootstrap/scss/type";
-@import "bootstrap/scss/images";
-@import "bootstrap/scss/code";
-@import "bootstrap/scss/grid";
-@import "bootstrap/scss/tables";
-@import "bootstrap/scss/forms";
-@import "bootstrap/scss/buttons";
+@import "reboot";
+@import "type";
+@import "images";
+@import "code";
+@import "grid";
+@import "tables";
+@import "forms";
+@import "buttons";
 
 // Components
-@import "bootstrap/scss/animation";
-@import "bootstrap/scss/dropdown";
-@import "bootstrap/scss/button-group";
-@import "bootstrap/scss/input-group";
-@import "bootstrap/scss/custom-forms";
-@import "bootstrap/scss/nav";
-@import "bootstrap/scss/navbar";
-@import "bootstrap/scss/card";
-@import "bootstrap/scss/breadcrumb";
-@import "bootstrap/scss/pagination";
-@import "bootstrap/scss/tags";
-@import "bootstrap/scss/jumbotron";
-@import "bootstrap/scss/alert";
-@import "bootstrap/scss/progress";
-@import "bootstrap/scss/media";
-@import "bootstrap/scss/list-group";
-@import "bootstrap/scss/responsive-embed";
-@import "bootstrap/scss/close";
+@import "transitions";
+@import "dropdown";
+@import "button-group";
+@import "input-group";
+@import "custom-forms";
+@import "nav";
+@import "navbar";
+@import "card";
+@import "breadcrumb";
+@import "pagination";
+@import "badge";
+@import "jumbotron";
+@import "alert";
+@import "progress";
+@import "media";
+@import "list-group";
+@import "responsive-embed";
+@import "close";
 
 // Components w/ JavaScript
-@import "bootstrap/scss/modal";
-@import "bootstrap/scss/tooltip";
-@import "bootstrap/scss/popover";
-@import "bootstrap/scss/carousel";
+@import "modal";
+@import "tooltip";
+@import "popover";
+@import "carousel";
 
 // Utility classes
-@import "bootstrap/scss/utilities";
+@import "utilities";
