--- a/css/_tk-type.scss
+++ b/css/_tk-type.scss
@@ -1,4 +1,11 @@
+// Based on bootstrap/scss/type
+// New styles are welcome to this file, however comments are favored
+// over deletions for easier future Bootstrap upgrades on BS styles
+
+// Begin TK additions
+
 $font-url-prefix: "../assets/fonts/";
+$font-size-root: 16px !default;
 
 /* Included as a mixin so that $font-url-prefix can be overridden */
 @mixin tk-font-faces {
@@ -27,29 +34,13 @@ $font-url-prefix: "../assets/fonts/";
     font-style: normal; }
 }
 
+html {
+  font-size: $font-size-root;
+}
+
 p {
   font-size: $tk-font-up-1;
 }
-
-//
-// Headings
-//
-
-h1, h2, h3, h4, h5, h6,
-.h1, .h2, .h3, .h4, .h5, .h6 {
-  margin-bottom: $headings-margin-bottom;
-  font-family: $headings-font-family;
-  font-weight: $headings-font-weight;
-  line-height: $headings-line-height;
-  color: $headings-color;
-}
-
-h1, .h1 { font-size: $tk-font-up-7; }
-h2, .h2 { font-size: $tk-font-up-6; }
-h3, .h3 { font-size: $tk-font-up-5; }
-h4, .h4 { font-size: $tk-font-up-4; }
-h5, .h5 { font-size: $tk-font-up-3; }
-h6, .h6 { font-size: $tk-font-up-2; }
 
 //
 // Font scale
@@ -73,7 +64,7 @@ h6, .h6 { font-size: $tk-font-up-2; }
 .font-down-5 { font-size: $tk-font-down-5; }
 
 //
-// Font Faces
+// Font faces
 //
 
 .tisa-light {
@@ -90,6 +81,66 @@ h6, .h6 { font-size: $tk-font-up-2; }
   font-family: $font-family-sans-serif;
   font-weight: 400;
 }
+
+//
+// Utilities
+//
+
+.lh-header {
+  line-height: $headings-line-height;
+}
+
+// End TK additions
+
+// Begin bootstrap/scss/type
+
+//
+// Headings
+//
+
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  margin-bottom: $headings-margin-bottom;
+  font-family: $headings-font-family;
+  font-weight: $headings-font-weight;
+  line-height: $headings-line-height;
+  color: $headings-color;
+}
+
+h1, .h1 { font-size: $tk-font-up-7; }
+h2, .h2 { font-size: $tk-font-up-6; }
+h3, .h3 { font-size: $tk-font-up-5; }
+h4, .h4 { font-size: $tk-font-up-4; }
+h5, .h5 { font-size: $tk-font-up-3; }
+h6, .h6 { font-size: $tk-font-up-2; }
+
+// .lead {
+//   font-size: $lead-font-size;
+//   font-weight: $lead-font-weight;
+// }
+
+// Type display classes
+// .display-1 {
+//   font-size: $display1-size;
+//   font-weight: $display1-weight;
+//   line-height: $display-line-height;
+// }
+// .display-2 {
+//   font-size: $display2-size;
+//   font-weight: $display2-weight;
+//   line-height: $display-line-height;
+// }
+// .display-3 {
+//   font-size: $display3-size;
+//   font-weight: $display3-weight;
+//   line-height: $display-line-height;
+// }
+// .display-4 {
+//   font-size: $display4-size;
+//   font-weight: $display4-weight;
+//   line-height: $display-line-height;
+// }
+
 
 //
 // Horizontal rules
@@ -110,7 +161,7 @@ h6, .h6 { font-size: $tk-font-up-2; }
 small,
 .small {
   font-size: $small-font-size;
-  font-weight: normal;
+  font-weight: $font-weight-normal;
 }
 
 mark,
@@ -140,25 +191,51 @@ mark,
   }
 }
 
-//
-// Utilities
-//
-
-.lh-header {
-  line-height: $headings-line-height;
-}
 
 //
 // Misc
 //
 
-@if not $enable-flex {
-  // Clean up some horizontal `<dl>`s built with grids
-  // scss-lint:disable QualifyingElement
-  dl.row {
-    > dd + dt {
-      clear: left;
-    }
-  }
-  // scss-lint:enable QualifyingElement
-}
+// Builds on `abbr`
+// .initialism {
+//   font-size: 90%;
+//   text-transform: uppercase;
+// }
+
+// Blockquotes
+// .blockquote {
+//   padding: ($spacer / 2) $spacer;
+//   margin-bottom: $spacer;
+//   font-size: $blockquote-font-size;
+//   border-left: $blockquote-border-width solid $blockquote-border-color;
+// }
+
+// .blockquote-footer {
+//   display: block;
+//   font-size: 80%; // back to default font-size
+//   color: $blockquote-small-color;
+
+//   &::before {
+//     content: "\2014 \00A0"; // em dash, nbsp
+//   }
+// }
+
+// Opposite alignment of blockquote
+// .blockquote-reverse {
+//   padding-right: $spacer;
+//   padding-left: 0;
+//   text-align: right;
+//   border-right: $blockquote-border-width solid $blockquote-border-color;
+//   border-left: 0;
+// }
+
+// .blockquote-reverse .blockquote-footer {
+//   &::before {
+//     content: "";
+//   }
+//   &::after {
+//     content: "\00A0 \2014"; // nbsp, em dash
+//   }
+// }
+
+// End bootstrap/scss/type
