--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
-<nav class="navbar navbar-light navbar-sticky-top bg-nav">
-  <a class="navbar-brand" href="{{ "/" | relative_url}}">
+<nav class="navbar navbar-toggleable navbar-light bg-nav">
+  <a class="navbar-brand mr-auto" href="{{ "/" | relative_url}}">
     <img src="{{ "/assets/svg/tk-logo.svg" | relative_url}}" height="40" class="align-baseline">
     <span>{{ site.title | escape }}</span>
   </a>
-  <form class="form-inline float-xs-right">
+  <form class="form-inline">
     <input class="form-control" type="text" placeholder="Search">
   </form>
 </nav>
