--- a/_includes/left-nav.html
+++ b/_includes/left-nav.html
@@ -1,24 +1,24 @@
-<div class="col-xs-2 bg-faded py-1">
-  <div class="mb-1">
-    <ul class="nav">
+<div class="col-md-2 bg-faded py-3">
+  <div class="mb-3">
+    <ul class="nav flex-md-column flex-wrap">
       {% for my_page in site.pages %}
         {% if my_page.title %}
-          <li class="nav-item">
-            <a class="nav-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+          <li class="nav-item mx-2 m-md-0">
+            <a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
           </li>
         {% endif %}
       {% endfor %}
     </ul>
   </div>
 
-  <div class="mb-1">
+  <div class="mb-3">
     <h6>Foundations</h6>
 
-    <ul class="nav">
+    <ul class="nav flex-md-column flex-wrap">
     {% for my_page in site.foundation_pages %}
       {% if my_page.title %}
-        <li class="nav-item">
-          <a class="nav-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+        <li class="nav-item m-2 m-md-0">
+          <a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
         </li>
       {% endif %}
     {% endfor %}
@@ -28,11 +28,11 @@
 
   <h6>Content Patterns</h6>
 
-  <ul class="nav">
+  <ul class="nav flex-md-column flex-wrap">
     {% for my_page in site.content_patterns %}
       {% if my_page.title %}
-        <li class="nav-item">
-          <a class="nav-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+        <li class="nav-item m-2 m-md-0">
+          <a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
         </li>
       {% endif %}
     {% endfor %}
