--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
       <div class="row">
         {% include left-nav.html %}
 
-        <div class="col-xs p-1">
+        <div class="col p-3">
           {{ content }}
         </div>
       </div>
