Explainer pattern docs
- Add bs badge component back in to be temporarily used in docs
- Move TK specific styling in tk-type to bottom so that @extend has
correct precedence
- Add attribution display patterns
- Add `font-up-0` and `font-down-0` helpers
- Set $text-muted to a XO gray

--- a/css/_custom.scss
+++ b/css/_custom.scss
@@ -289,7 +289,7 @@ $lead-font-weight: 300 !default;
 
 $small-font-size: 80% !default;
 
-$text-muted: $gray-light !default;
+$text-muted: $safe-gray-5 !default;
 
 $abbr-border-color: $gray-light !default;
 
