--- a/css/_tk-core.scss
+++ b/css/_tk-core.scss
@@ -1,4 +1,5 @@
 @import "tk-variables";
+@import "tk-colors";
 @import "tk-mixins";
 
 /*!
@@ -38,7 +39,7 @@
 // @import "bootstrap/scss/card";
 // @import "bootstrap/scss/breadcrumb";
 // @import "bootstrap/scss/pagination";
-// @import "bootstrap/scss/badge";
+@import "bootstrap/scss/badge";
 // @import "bootstrap/scss/jumbotron";
 // @import "bootstrap/scss/alert";
 // @import "bootstrap/scss/progress";
