Improve css-module default class name

--- a/packages/tools/generator-union/generators/css-module/templates/src/index.css
+++ b/packages/tools/generator-union/generators/css-module/templates/src/index.css
@@ -26,10 +26,10 @@
  *    console.log(myCssModule.testClass); // Logs hashed class name
  * */
 
-.test-class {
+.<%= componentOrModuleName %> {
   border: 1px solid red;
 }
 
-.test-class::before {
+.<%= componentOrModuleName %>::before {
   content: my-variable;
 }
