--- a/packages/docs/src/components/Layout/styles.css
+++ b/packages/docs/src/components/Layout/styles.css
@@ -2,3 +2,20 @@
   composes: col-md-2 from '@union/bootstrap/lib/grid';
   composes: py-3 from '@union/bootstrap/lib/utilities';
 }
+
+.article {
+  composes: col from '@union/bootstrap/lib/grid';
+}
+
+/*
+ * This feels a little hacky but is just to add some extra spacing in articles
+ * */
+.article h1,
+.article h2,
+.article h3,
+.article h4,
+.article h5,
+.article h6 {
+  margin-top: 35px;
+}
+
