--- a/packages/components/fields-css/src/index.scss
+++ b/packages/components/fields-css/src/index.scss
@@ -1,6 +1,6 @@
 /* Static classes */
 @value ( container, field-container ) from 'styles/container';
-@value ( field-label, invalid-field, requirements ) from 'styles/field';
+@value ( field-label, invalid-field, valid-field, requirements ) from 'styles/field';
 @value ( textarea-label, textarea-without-label, textarea-with-label ) from 'styles/textarea';
 @value ( dropdown-caret ) from 'styles/dropdown-field';
 @value ( dropdown-item, dropdown-item-check ) from 'styles/dropdown-item';
