Change from hashHistory to browserHistory
This is to improve linking to articles and sections of articles

--- a/packages/docs/src/demos/Form/styles.css
+++ b/packages/docs/src/demos/Form/styles.css
@@ -1,4 +1,4 @@
-@value ( white, lilac-tint-80 ) from '@union/colors';
+@value ( white ) from '@union/colors';
 @value light-blue: #eef7f8;
 
 .demo-for-gray-theme {
