--- a/src/fields/css/styles/field.scss
+++ b/src/fields/css/styles/field.scss
@@ -5,7 +5,7 @@
   gray-55,
   black,
   mint-tint-80
-) from '@union/colors';
+) from '@xo-union/colors';
 
 @value ( solid-border ) from 'fields/css/shared/borders';
 @value ( spacer-x ) from 'fields/css/shared/spacing';
