--- a/src/fields/css/styles/label.scss
+++ b/src/fields/css/styles/label.scss
@@ -1,4 +1,4 @@
-@value black from '@union/colors';
+@value black from '@xo-union/colors';
 @value ( font-size-xsmall ) from 'fields/css/shared/fonts';
 
 .label {
