--- a/src/fields/css/styles/textarea.scss
+++ b/src/fields/css/styles/textarea.scss
@@ -1,4 +1,4 @@
-@value ( black, gray-55 ) from '@union/colors';
+@value ( black, gray-55 ) from '@xo-union/colors';
 @value ( spacer-x ) from 'fields/css/shared/spacing';
 @value ( font-size-medium ) from 'fields/css/shared/fonts';
 
