--- a/src/fields/css/styles/container.scss
+++ b/src/fields/css/styles/container.scss
@@ -3,7 +3,7 @@
 }
 
 .field-container {
-  composes: sans-serif text-left from '@union/typography';
+  composes: sans-serif text-left from '@xo-union/typography';
   composes: container;
 
   * {
