--- a/pattern-library/src/_shared/_bootstrap-overrides.scss
+++ b/pattern-library/src/_shared/_bootstrap-overrides.scss
@@ -1,7 +1,21 @@
-@import 'custom';
 @import '~bootstrap/scss/variables';
 @import '~bootstrap/scss/mixins';
 
-/*
-Currently this file contains to overrides, but it will soon.
+/**
+ * Bootstrap overrides
  */
+
+$font-family-sans-serif: "tisa sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+$font-family-serif: "tisa", Georgia, "Times New Roman", Times, serif;
+
+/* Base body styles  */
+$font-family-base: $font-family-sans-serif;
+$font-size-base: 16px;
+
+$line-height-base: 1.55;
+$headings-line-height: 1.25;
+
+/* Do we keep these? */
+$link-hover-color: #0275d8;
+$link-hover-decoration: none;
+
