--- a/pattern-library/src/typography/globals.scss
+++ b/pattern-library/src/typography/globals.scss
@@ -1,3 +1,4 @@
 @import '~#/_shared/bootstrap-overrides';
 @import '~bootstrap/scss/type';
-@import 'fonts';
+
+@value ( sans-family, sans-serif-family ) from '@xo-union/typography/fonts';
