--- a/pattern-library/src/typography/index.scss
+++ b/pattern-library/src/typography/index.scss
@@ -1,7 +1,9 @@
 @import '~#/_shared/bootstrap-overrides';
-@import '~bootstrap/scss/type';
-@import 'fonts';
+@import './variables';
+@import './math';
 
-.sans-serif {
-  font-family: 'tisa sans', sans-serif;
-}
+@import '~bootstrap/scss/type';
+@import './modules/font-scales';
+@import './modules/font-weights';
+
+@value ( sans-family, sans-serif-family ) from '@xo-union/typography/fonts';
