--- a/pattern-library/src/bootstrap/reboot.scss
+++ b/pattern-library/src/bootstrap/reboot.scss
@@ -3,7 +3,7 @@
 @import '~bootstrap/scss/reboot';
 
 /* Improve font rendering for all elements */
-* {
+body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
