Correct comment in on font-weights

--- a/pattern-library/src/typography/modules/font-weights.scss
+++ b/pattern-library/src/typography/modules/font-weights.scss
@@ -1,4 +1,4 @@
-/* tisa-* classes should be deprecated. They create unwanted coupling between consumers and class names*/
+/* tisa-* classes should be deprecated. They create unwanted coupling between font and class names*/
 .tisa-light,
 .serif-light
 {
