--- a/pattern-library/src/typography/fonts.scss
+++ b/pattern-library/src/typography/fonts.scss
@@ -2,7 +2,7 @@
 @value sans-serif-family tisa sans;
 
 @function fonts-url($url) {
-  $font-url-prefix: "//static.xoedge.com/union/fonts";
+  $font-url-prefix: "~#assets/fonts";
 
   @return url('#{$font-url-prefix}/#{$url}');
 }
