Refactor typography module to avoid unnecessary import of variable names

--- a/pattern-library/src/typography/modules.scss
+++ b/pattern-library/src/typography/modules.scss
@@ -4,5 +4,10 @@
 @require '@xo-union/typography/fonts';
 
 @import '~#/_shared/bootstrap-overrides';
+@import './variables';
+@import './math';
+
 @import '~bootstrap/scss/type';
+@import './modules/font-scales';
+@import './modules/font-weights';
 
