Update form-fields colors and type to use Union values
#37

- Add Utility Palette to colors for things that don’t fit in the
primary palette
- Remove form-field custom font sizes
- Update error and valid field colors to reflect Sketch values
- Remove @-moz-document url-prefix() since Firefox now supports
:placeholder-shown
- Add typography/sizes that maps sass vars to @values

--- a/pattern-library/src/colors/index.css
+++ b/pattern-library/src/colors/index.css
@@ -254,3 +254,12 @@
 @value gray-85: #d9d9d9;
 @value gray-90: #e6e6e6;
 @value gray-95: #f2f2f2;
+
+/* UTILITY PALETTE */
+
+@value coral-tint-8-saturated: #e72914;
+@value red: #c00404;
+@value red-tint-90: #f8e6e6;
+@value green: #1ca420;
+@value green-tint-90: #e8f6e9;
+@value green-tint-80: #d1ecd2;
