--- a/pattern-library/src/fields/css/styles/dropdown-item.scss
+++ b/pattern-library/src/fields/css/styles/dropdown-item.scss
@@ -1,8 +1,8 @@
 @value ( gray-55, gray-90, black ) from '@xo-union/colors';
+@value ( font-up-1 ) from '@xo-union/typography/sizes';
 
 .dropdown-item {
-  composes: medium-font-size from '#/fields/css/shared/fonts';
-
+  font-size: font-up-1;
   padding: 10px;
   cursor: pointer;
   position: relative;
