--- a/pattern-library/src/fields/css/styles/textarea.scss
+++ b/pattern-library/src/fields/css/styles/textarea.scss
@@ -1,6 +1,6 @@
 @value ( black, gray-55 ) from '@xo-union/colors';
 @value ( spacer-x ) from '#/fields/css/shared/spacing';
-@value ( font-size-medium ) from '#/fields/css/shared/fonts';
+@value ( font-up-1 ) from '@xo-union/typography/sizes';
 
 .textarea {
   composes: radius-reset from '#/fields/css/shared/resets';
@@ -14,7 +14,7 @@
   &::-ms-input-placeholder,
   &::-webkit-input-placeholder {
     color: gray-55;
-    font-size: font-size-medium;
+    font-size: font-up-1;
     font-weight: 300;
   }
 }
